--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "cookies-next": "^4.1.1",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "next": "14.1.0",
@@ -19,6 +21,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
