--- a/lambdas/api/package.json
+++ b/lambdas/api/package.json
@@ -20,9 +20,10 @@
     "@aws-sdk/lib-dynamodb": "^3.577.0"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "claudia-api-builder": "^4.1.2",
     "dotenv": "^16.4.5",
-    "jsonwebtoken": "^9.0.2"
+    "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.1"
   }
 }
