--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.6.7",
     "cookies-next": "^4.1.1",
     "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "14.1.0",
+    "nvm": "^0.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
@@ -23,9 +25,11 @@
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
+    "yarn": "^1.22.22",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
